# lang_agent

./: .gitmodules  Dockerfile  Makefile  README.md  README.org  _CoqProject  build.sh  build2.sh  build_push.sh  chess.sh  clang.sh  connect.sh  default.nix  dune-project  flake.nix  gen_fold_simple.sh  gen_grammar_simple.sh  grammar2.sh  grammar2b.sh  grammar2c.sh  grammar2cs.sh  grammar_dungeon.sh  grammar_dungeon_simple.sh  grammar_run.sh  image_aa.sh  image_local.sh  json.js  lang_agent.opam  log1.txt  log2.txt  log3.txt  log4.txt  opam-selection.nix  prompt.org  prompt.txt  prompt_grammar2.txt  prompt_grammar2c.txt  proofhead.txt  recurse.sh  run.sh  (+12 more)
data/folder/: dune  grammar1.ebnf  grammar2.ebnf  grammar3.ebnf  languageModel.ml  language_model.ml  sim_folder_1.ml  testResult.ml
data/folder/grammar/: prompt_grammar3h.txt  prompt_grammar3t.txt  run.sh  sim_folder_1_2024-02-18T13:41:04-05:00_1.txt  sim_folder_1_2024-02-18T13:41:04-05:00_10.txt  sim_folder_1_2024-02-18T13:41:04-05:00_11.txt  sim_folder_1_2024-02-18T13:41:04-05:00_12.txt  sim_folder_1_2024-02-18T13:41:04-05:00_13.txt  sim_folder_1_2024-02-18T13:41:04-05:00_14.txt  sim_folder_1_2024-02-18T13:41:04-05:00_2.txt  sim_folder_1_2024-02-18T13:41:04-05:00_3.txt  sim_folder_1_2024-02-18T13:41:04-05:00_4.txt  sim_folder_1_2024-02-18T13:41:04-05:00_6.txt  sim_folder_1_2024-02-18T13:41:04-05:00_7.txt  sim_folder_1_2024-02-18T13:41:04-05:00_8.txt  sim_folder_1_2024-02-18T13:41:04-05:00_9.txt
data/folder/ocaml/: sim_folder_1_2024-02-18T13:44:52-05:00_1.txt  sim_folder_1_2024-02-18T13:44:52-05:00_10.txt  sim_folder_1_2024-02-18T13:44:52-05:00_100.txt  sim_folder_1_2024-02-18T13:44:52-05:00_101.txt  sim_folder_1_2024-02-18T13:44:52-05:00_102.txt  sim_folder_1_2024-02-18T13:44:52-05:00_103.txt  sim_folder_1_2024-02-18T13:44:52-05:00_104.txt  sim_folder_1_2024-02-18T13:44:52-05:00_105.txt  sim_folder_1_2024-02-18T13:44:52-05:00_106.txt  sim_folder_1_2024-02-18T13:44:52-05:00_107.txt  sim_folder_1_2024-02-18T13:44:52-05:00_108.txt  sim_folder_1_2024-02-18T13:44:52-05:00_109.txt  sim_folder_1_2024-02-18T13:44:52-05:00_11.txt  sim_folder_1_2024-02-18T13:44:52-05:00_110.txt  sim_folder_1_2024-02-18T13:44:52-05:00_111.txt  sim_folder_1_2024-02-18T13:44:52-05:00_112.txt  sim_folder_1_2024-02-18T13:44:52-05:00_113.txt  sim_folder_1_2024-02-18T13:44:52-05:00_114.txt  sim_folder_1_2024-02-18T13:44:52-05:00_115.txt  sim_folder_1_2024-02-18T13:44:52-05:00_116.txt  sim_folder_1_2024-02-18T13:44:52-05:00_117.txt  sim_folder_1_2024-02-18T13:44:52-05:00_118.txt  sim_folder_1_2024-02-18T13:44:52-05:00_119.txt  sim_folder_1_2024-02-18T13:44:52-05:00_12.txt  sim_folder_1_2024-02-18T13:44:52-05:00_120.txt  sim_folder_1_2024-02-18T13:44:52-05:00_121.txt  sim_folder_1_2024-02-18T13:44:52-05:00_122.txt  sim_folder_1_2024-02-18T13:44:52-05:00_123.txt  (+491 more)
(+1483 files in other folders)
