
(env
 (_
  (flags
   (:standard ;;-warn-error -9-27-26
  ))))

(library
 (libraries ezcurl-lwt yojson ppx_yojson_conv_lib openai str )
 (preprocess
  (pps ppx_yojson_conv ppx_yojson lwt_ppx ))

 (name lang_agent_fold))

; (coq.theory
;  (name lang_model)
;  (package lang_agent)
;  (synopsis "A Coq theory that uses MetaCoq")
;  (theories  MetaCoq MetaCoq.Template  Equations Ltac2 ))
